<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edit_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titel"
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_text_sum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lägg_till_sum"
        android:inputType="textMultiLine" />


    <Button
        android:id="@+id/data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_date" />






</LinearLayout>