<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


        <TextView
            android:id="@+id/textViewYourName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </LinearLayout>

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvYourTotalIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/your_totale_income"
                android:layout_below="@id/textViewYourName"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_toStartOf="@id/textViewTotalIncome"/>
            <TextView
                android:id="@+id/textViewTotalIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewName"
                android:layout_alignParentEnd="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewYourTotalExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_totale_expense"
                android:layout_below="@id/textViewTotalIncome"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            <TextView
                android:id="@+id/textViewTotalExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewName"
                android:layout_alignParentEnd="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewName"
                android:layout_alignParentEnd="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.anychart.AnyChartView
            android:id="@+id/any_chart_view"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_gravity="center"/>

        </LinearLayout>


     <!--   <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/activity_text_view"
            android:layout_below="@id/textViewSum"/>-->



    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>